--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "param":
     {
         "gmail-user":"acpatil1112@gmail.com",
-        "gmail-password":"idzf hdoh gghf ruvh"
+        "gmail-password":"qrri rxip qfcm sbgo"
     }
 }
